crates/fortitude_linter/src/diagnostics/message/snapshots/fortitude_linter__diagnostics__message__grouped__tests__output_as_severity_none.snap
---
source: crates/fortitude_linter/src/diagnostics/message/grouped.rs
expression: content
---
star_kind.f90:
  1:8 PORT021 integer*4 is non-standard, use integer(4)

test.f90:
  6:5 S201 'implicit none' set on the enclosing module
  7:3 S061 end statement should read 'end subroutine foo'
